cloud/local/development/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry-internal
  labels:
    name: registry-internal
