cloud/local/development/registry/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - name: test-image
      image: internal.io/nginx-test:1.0.0
  restartPolicy: Never
