cloud/local/development/registry/webdav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav-service
  namespace: registry-internal
spec:
  type: ExternalName
  externalName: webdav-service.webdav.svc.cluster.local
