cloud/local/development/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingres
  namespace: registry-internal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /registry(/|$)(.*)
            backend:
              service:
                name: registry-service
                port:
                  number: 80
